Completed creating the Doctor dashboard api